# clang-expand

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md  clang-expand.cpp  compile_commands.json  docker-compose.yaml  main.cpp
cmake/modules/: FindClang.cmake  FindLLVM.cmake
docker/: build.sh  debian.Dockerfile  docker-compose.yaml  fedora.Dockerfile  opensuse.Dockerfile  ubuntu.Dockerfile
docs/: Doxyfile
include/clang-expand/: action.hpp  options.hpp  result.hpp  search.hpp
include/clang-expand/common/: assignee-data.hpp  call-data.hpp  canonical-location.hpp  context-data.hpp  data.hpp  declaration-data.hpp  definition-data.hpp  definition-rewriter.hpp  function-properties.hpp  location.hpp  offset.hpp  parameter-rewriter.hpp  query.hpp  range.hpp  routines.hpp  state.hpp  structures.hpp
include/clang-expand/definition-search/: action.hpp  consumer.hpp  match-handler.hpp  tool-factory.hpp
include/clang-expand/symbol-search/: action.hpp  consumer.hpp  macro-search.hpp  match-handler.hpp  preprocessor-hooks.hpp  tool-factory.hpp
source/: CMakeLists.txt  action.cpp  result.cpp  search.cpp
source/common/: assignee-data.cpp  call-data.cpp  canonical-location.cpp  declaration-data.cpp  definition-data.cpp  definition-rewriter.cpp  location.cpp  offset.cpp  parameter-rewriter.cpp  query.cpp  range.cpp  routines.cpp  structures.cpp
source/definition-search/: action.cpp  consumer.cpp  match-handler.cpp  tool-factory.cpp
source/symbol-search/: action.cpp  consumer.cpp  macro-search.cpp  match-handler.cpp  preprocessor-hooks.cpp  tool-factory.cpp
